# libde

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
src/: Emitter.cpp  Emitter.h  Receiver.h  de.h
tests/: Makefile  basic.cpp  data.cpp
